--- a/static/sass/custom/layout.scss
+++ b/static/sass/custom/layout.scss
@@ -2,6 +2,14 @@
 // Layout
 ////
 
+html {
+    background-color: $white;
+}
+
+.page {
+    margin: 0 4em;
+}
+
 .headlines {
     font-size: 1.5em;
 }
