--- a/static/sass/custom/typography.scss
+++ b/static/sass/custom/typography.scss
@@ -3,7 +3,7 @@
 ////
 
 html {
-    color: $white;
+    color: $dark;
     font-size: $fontSize;
 }
 
